# school-grader

./: LICENSE  README.md  pyproject.toml
src/school_grader/: __init__.py  equality.py  html_test_result.py  json_test_result.py  test_case.py
